<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/design_bottom_sheet_driver"
    android:background="@android:color/transparent"
    app:behavior_hideable="false"
    app:behavior_peekHeight="80dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="1dp"
        app:cardElevation="20dp">


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <View
            android:layout_width="30dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/client_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/client_phone"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/cancel_ride_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/cancel_the_ride"
                android:background="@drawable/reject_botton"/>

            <Button
                android:id="@+id/pickedUp_customer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/pick_up"
                android:background="@drawable/pickup_botton"/>

            <Button
                android:id="@+id/finish_ride_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/finish_ride"
                android:background="@drawable/accept_bottom"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>